@@ -2,27 +2,28 @@ package com.cczu.nosql.service.impl;
 
 import com.cczu.nosql.entity.User;
 import com.cczu.nosql.entity.UserFollow;
+import com.cczu.nosql.request.PageParam;
 import com.cczu.nosql.response.FollowStateResponse;
-import com.cczu.nosql.response.FollowersResponse;
-import com.cczu.nosql.response.FollowingsResponse;
+import com.cczu.nosql.response.FollowerResponse;
+import com.cczu.nosql.response.FollowingResponse;
 import com.cczu.nosql.response.UserInfoResponse;
+import com.cczu.nosql.result.PageResult;
 import com.cczu.nosql.service.FollowService;
 import io.ebean.DB;
-import io.ebean.Database;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
+import io.ebean.PagedList;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
 public class FollowServiceImpl implements FollowService {
 	@Override
 	public FollowStateResponse toggleFollow(Long uid, Long toUserId) {
-		boolean exists = DB.find(UserFollow.class).where().eq("fromUserId", uid).eq("toUserId", toUserId).exists();
+		boolean exists = DB.find(UserFollow.class).where().eq("fromUser.id", uid).eq("toUser.id", toUserId).exists();
 		if (exists) {
-			DB.find(UserFollow.class).where().eq("fromUserId", uid).eq("toUserId", toUserId).delete();
+			DB.find(UserFollow.class).where().eq("fromUser.id", uid).eq("toUser.id", toUserId).delete();
 			return new FollowStateResponse(false);
 		} else {
 			UserFollow userFollow = new UserFollow(uid, toUserId);
@@ -33,40 +34,84 @@ public class FollowServiceImpl implements FollowService {
 
 	@Override
 	public FollowStateResponse exists(Long uid, Long toUserId) {
-		return DB.find(UserFollow.class).where().eq("fromUserId", uid).eq("toUserId", toUserId).exists()
+		return DB.find(UserFollow.class).where().eq("fromUser.id", uid).eq("toUser.id", toUserId).exists()
 				? new FollowStateResponse(true)
 				: new FollowStateResponse(false);
 	}
 
 	@Override
-	public FollowersResponse getUserFollowers(Long uid) {
-		List<UserFollow> userFollows = DB.find(UserFollow.class)
+	public PageResult<FollowerResponse> getUserFollowers(Long uid, PageParam pageParam) {
+		PagedList<UserFollow> pagedList = DB.find(UserFollow.class)
 				.fetch("fromUser")
 				.where()
 				.eq("toUser.id", uid)
-				.findList();
-		List<UserInfoResponse> followers = userFollows.stream()
+				.orderBy("id desc")
+				.setFirstRow((int) ((pageParam.getCurrent() - 1) * pageParam.getSize()))
+				.setMaxRows((int) pageParam.getSize())
+				.findPagedList();
+
+		List<Long> followerIds = pagedList.getList().stream()
+				.map(uf -> uf.getFromUser().getId())
+				.toList();
+
+		Set<Long> mutualIdSet = DB.find(UserFollow.class)
+				.where()
+				.eq("fromUser.id", uid)
+				.in("toUser.id", followerIds)
+				.findList()
+				.stream()
+				.map(uf -> uf.getToUser().getId())
+				.collect(Collectors.toSet());
+
+		List<FollowerResponse> followerResponses = pagedList.getList().stream()
 				.map(uf -> {
-					User u = uf.getFromUser();
-					return new UserInfoResponse(u.getId(), u.getName());
+					User follower = uf.getFromUser();
+					UserInfoResponse userInfo =
+							new UserInfoResponse(follower.getId(), follower.getName());
+					boolean isMutual = mutualIdSet.contains(follower.getId());
+					return new FollowerResponse(userInfo, isMutual);
 				})
-				.collect(Collectors.toList());
-		return new FollowersResponse(uid, followers);
+				.toList();
+
+		return PageResult.of(followerResponses, pagedList);
 	}
 
+
 	@Override
-	public FollowingsResponse getUserFollowings(Long uid) {
-		List<UserFollow> userFollows = DB.find(UserFollow.class)
+	public PageResult<FollowingResponse> getUserFollowings(Long uid, PageParam pageParam) {
+		PagedList<UserFollow> pagedList = DB.find(UserFollow.class)
 				.fetch("toUser")
 				.where()
 				.eq("fromUser.id", uid)
-				.findList();
-		List<UserInfoResponse> followings = userFollows.stream()
+				.orderBy("id desc")
+				.setFirstRow((int) ((pageParam.getCurrent() - 1) * pageParam.getSize()))
+				.setMaxRows((int) pageParam.getSize())
+				.findPagedList();
+
+		List<Long> followingIds = pagedList.getList().stream()
+				.map(uf -> uf.getToUser().getId())
+				.toList();
+
+		Set<Long> mutualIdSet = DB.find(UserFollow.class)
+				.where()
+				.in("fromUser.id", followingIds)
+				.eq("toUser.id", uid)
+				.findList()
+				.stream()
+				.map(uf -> uf.getFromUser().getId())
+				.collect(Collectors.toSet());
+
+		List<FollowingResponse> followingResponses = pagedList.getList().stream()
 				.map(uf -> {
-					User u = uf.getToUser();
-					return new UserInfoResponse(u.getId(), u.getName());
+					User following = uf.getToUser();
+					UserInfoResponse userInfo =
+							new UserInfoResponse(following.getId(), following.getName());
+					boolean isMutual = mutualIdSet.contains(following.getId());
+					return new FollowingResponse(userInfo, isMutual);
 				})
-				.collect(Collectors.toList());
-		return new FollowingsResponse(uid, followings);
+				.toList();
+
+		return PageResult.of(followingResponses, pagedList);
 	}
+
 }
